--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML - Intermediate</title>
+    <title>HTML - Intermediate 1</title>
     <link rel="stylesheet" href="style.css" />
     <style>
       body {
@@ -19,6 +19,7 @@
     </style>
   </head>
   <body>
+    <h1>Various ways of styling the HTML elements</h1>
     <!-- Inline CSS style -->
     <h1 style="color: tomato">A blue heading</h1>
     <p style="color: blue">
