--- a/index10.html
+++ b/index10.html
@@ -8,20 +8,23 @@
   </head>
   <body>
     <h1>My First Java Script</h1>
-    <button onClick="document.getElementById('demo').innerHTML = Date()">
+
+    <p id="demo1"></p>
+
+    <button onClick="document.getElementById('demo1').innerHTML = Date()">
       Click here for Date & Time
     </button>
 
-    <p id="demo">Java Script can change the style of an HTML element</p>
+    <p id="demo2">Java Script can change the style of an HTML element</p>
     <button type="button" onclick="myFunction()">
       Click Me to Change Style!
     </button>
 
     <script>
       function myFunction() {
-        document.getElementById('demo').style.fontSize = '25px';
-        document.getElementById('demo').style.color = 'red';
-        document.getElementById('demo').style.backgroundColor = 'yellow';
+        document.getElementById('demo2').style.fontSize = '25px';
+        document.getElementById('demo2').style.color = 'red';
+        document.getElementById('demo2').style.backgroundColor = 'yellow';
       }
 
       function light(status) {
@@ -34,22 +37,22 @@
         document.getElementById('myImage').src = pic;
       }
     </script>
-    
-    
+
     <p style="text-align: center">
-    <img id="myImage" src="/images/bulb-off.png" width="100" height="180" /> <br>
+      <img id="myImage" src="/images/bulb-off.png" width="100" height="180" />
+      <br />
       <button type="button" onClick="light(1)">Light On</button>
       <button type="button" onClick="light(0)">Light Off</button>
     </p>
 
     <h2>File Paths</h2>
     <!-- file located in same folder as current page -->
-    <img src="picture.jpg">   
+    <img src="picture.jpg" />
     <!-- file located in images folder in the current folder -->
-    <img src="images/picture.jpg"> 
+    <img src="images/picture.jpg" />
     <!-- the file is located in the images folder at the root of the current web -->
-    <img src="/images/picture.jpg"> 
+    <img src="/images/picture.jpg" />
     <!-- file is located one level up from the current folder -->
-    <img src="../picture.jpg"> 
+    <img src="../picture.jpg" />
   </body>
 </html>
